# tdlib-purple

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  IMPROVEMENT_AND_MODERNIZATION_PLAN.md  README.md  RELEASING.md  account-data.cpp  client-utils.cpp  client-utils.h  config.cpp.in  format.cpp  gif.h  identifiers.cpp  release-please-config.json  secret-chat.cpp  td-client-auth.cpp  td-client.cpp
.github/: ga_build_td.sh
.github/codeql/: config.yml
.github/scripts/: build-release-assets.sh
.github/workflows/: cmake.yml  release.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/upgrade_tdlib_20260520/: index.md  spec.md
conductor/tracks/upgrade_tdlib_20260520/: metadata.json  plan.md
data/: tdlib-purple.metainfo.untranslated.xml  tdlib-purple.metainfo.xml
rlottie/src/vector/: vbitmap.cpp  vimageloader.cpp
rlottie/src/vector/stb/: stb_image.h
test/: CMakeLists.txt  libpurple-mock.cpp  login-test.cpp  private-chat-test.cpp
